examples/test/testpolicy281.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy281
  namespace: namespace478
spec:
  podSelector:
    matchLabels:
      key35: value5
      key25: value21
      key44: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value37
          key39: value26
      podSelector:
        matchLabels:
          key4: value17
          key45: value42
